# MASSim

./: CMakeLists.txt  README.md  build_befehl.txt  color_grad.js  index.html  mas_sim.js  mas_sim.wasm  style.css
.github/workflows/: main.yml
executables/: CMakeLists.txt  main.cpp
include/: viz.h
include/mas_sim/: agent.h  agentA.h  agentB.h  grid.h  mas_sim.h
src/: CMakeLists.txt  bindings.cpp  viz.cpp
src/mas_sim/: agent.cpp  agentA.cpp  agentB.cpp  grid.cpp  mas_sim.cpp
